ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: test07-ingress
spec:
  ingressClassName: nginx
  rules:
  - host: arch.homework
    http:
      paths:
        - path: /
          pathType: Prefix
          backend:
            service:
              name: test07
              port:
                number: 8000
